--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
 .slide {
+    height: 100%;
+    max-width: 100%;
+}
+.hidden {
+    display: none;
+}
+.show {
+    display: unset;
+}
+#carousel {
+    height: 50vh;
+}
+button {
+    width: 50px;
+    height: 50px;
+}
+.schermata {
     width: 100%;
+    max-height: 50vh;
 }
